Feature/items with extras (#11)
* Update Database: Item has only one picture

* Impl AddKeywordToItem

* Disable save same keyword item combi in db

* Impl Add- and Remove-Keywords

* Impl add and remove subjects

* Upadte swagger
