# Backend/src/controllers/item_controller.go
@@ -14,11 +14,19 @@ type ItemControllerI interface {
 	GetItemById(itemId *uuid.UUID) (*models.ItemWithEverything, *models.INVError)
 	CreateItem(item *models.ItemWithStatus) (*uuid.UUID, *models.INVError)
 	UpdateItem(item *models.ItemWithStatus) *models.INVError
+	AddKeywordToItem(itemKeyword models.ItemWithKeywordName) *models.INVError
+	RemoveKeywordFromItem(itemKeyword models.ItemWithKeywordName) *models.INVError
+	AddSubjectToItem(itemSubject models.ItemWithSubjectName) *models.INVError
+	RemoveSubjectFromItem(itemSubject models.ItemWithSubjectName) *models.INVError
 }
 
 type ItemController struct {
-	ItemRepo       repositories.ItemRepositoryI
-	ItemStatusRepo repositories.ItemStatusRepositoryI
+	ItemRepo        repositories.ItemRepositoryI
+	KeywordRepo     repositories.KeywordRepositoryI
+	SubjectRepo     repositories.SubjectRepositoryI
+	ItemStatusRepo  repositories.ItemStatusRepositoryI
+	ItemKeywordRepo repositories.ItemKeywordRepositoryI
+	ItemSubjectRepo repositories.ItemSubjectRepositoryI
 }
 
 func (ic *ItemController) GetItems() (*[]models.ItemWithEverything, *models.INVError) {
@@ -100,6 +108,92 @@ func (ic *ItemController) UpdateItem(item *models.ItemWithStatus) *models.INVErr
 	}
 
 	inv_error := ic.ItemRepo.UpdateItem(&pureItem)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	return nil
+}
+
+func (ic *ItemController) AddKeywordToItem(itemKeyword models.ItemWithKeywordName) *models.INVError {
+	keyword, inv_error := ic.KeywordRepo.GetKeywordByName(&itemKeyword.KeywordName)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	itemKeywordWithID := models.ItemWithKeyword{
+		ItemID:    itemKeyword.ItemID,
+		KeywordID: keyword.ID,
+	}
+
+	inv_err := ic.ItemKeywordRepo.CheckIfKeywordAndItemExists(itemKeywordWithID)
+	if inv_err != nil {
+		return inv_err
+	}
+
+	_, inv_error = ic.ItemKeywordRepo.CreateKeywordForItem(&itemKeywordWithID)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	return nil
+}
+
+func (ic *ItemController) RemoveKeywordFromItem(itemKeyword models.ItemWithKeywordName) *models.INVError {
+	keyword, inv_error := ic.KeywordRepo.GetKeywordByName(&itemKeyword.KeywordName)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	itemKeywordWithID := models.ItemWithKeyword{
+		ItemID:    itemKeyword.ItemID,
+		KeywordID: keyword.ID,
+	}
+
+	inv_error = ic.ItemKeywordRepo.DeleteKeywordForItem(&itemKeywordWithID)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	return nil
+}
+
+func (ic *ItemController) AddSubjectToItem(itemSubject models.ItemWithSubjectName) *models.INVError {
+	subject, inv_error := ic.SubjectRepo.GetSubjectByName(&itemSubject.SubjectName)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	itemSubjectWithID := models.ItemWithSubject{
+		ItemID:    itemSubject.ItemID,
+		SubjectID: subject.ID,
+	}
+
+	inv_err := ic.ItemSubjectRepo.CheckIfSubjectAndItemExists(itemSubjectWithID)
+	if inv_err != nil {
+		return inv_err
+	}
+
+	_, inv_error = ic.ItemSubjectRepo.CreateSubjectForItem(&itemSubjectWithID)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	return nil
+}
+
+func (ic *ItemController) RemoveSubjectFromItem(itemSubject models.ItemWithSubjectName) *models.INVError {
+	subject, inv_error := ic.SubjectRepo.GetSubjectByName(&itemSubject.SubjectName)
+	if inv_error != nil {
+		return inv_error
+	}
+
+	itemSubjectWithID := models.ItemWithSubject{
+		ItemID:    itemSubject.ItemID,
+		SubjectID: subject.ID,
+	}
+
+	inv_error = ic.ItemSubjectRepo.DeleteSubjectForItem(&itemSubjectWithID)
 	if inv_error != nil {
 		return inv_error
 	}
