# Backend/src/docs/swagger.json
@@ -233,11 +233,11 @@
                 "parameters": [
                     {
                         "description": "ItemWithStatus model",
-                        "name": "room",
+                        "name": "item",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Rooms"
+                            "$ref": "#/definitions/models.ItemWithStatus"
                         }
                     }
                 ],
@@ -337,6 +337,178 @@
                             "items": {
                                 "$ref": "#/definitions/models.ItemWithEverything"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/items/addkeyword": {
+            "post": {
+                "description": "Add keyword to item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Add keyword to item",
+                "parameters": [
+                    {
+                        "description": "ItemWithKeywordName model",
+                        "name": "item_keyword",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ItemWithKeywordName"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/items/addsubject": {
+            "post": {
+                "description": "Add Subject to item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Add Subject to item",
+                "parameters": [
+                    {
+                        "description": "ItemWithSubjectName model",
+                        "name": "item_keyword",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ItemWithSubjectName"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/items/removekeyword": {
+            "post": {
+                "description": "Remove keyword to item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Remove keyword to item",
+                "parameters": [
+                    {
+                        "description": "ItemWithKeywordName model",
+                        "name": "item_keyword",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ItemWithKeywordName"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/items/removesubject": {
+            "post": {
+                "description": "Remove Subject to item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Items"
+                ],
+                "summary": "Remove Subject to item",
+                "parameters": [
+                    {
+                        "description": "ItemWithSubjectName model",
+                        "name": "item_subject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ItemWithSubjectName"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.INVErrorMessage"
                         }
                     },
                     "500": {
@@ -986,7 +1158,7 @@
                             "itemID": {
                                 "type": "string"
                             },
-                            "keyword": {
+                            "keywordID": {
                                 "type": "string"
                             }
                         }
@@ -995,22 +1167,8 @@
                 "name": {
                     "type": "string"
                 },
-                "pictures": {
-                    "type": "array",
-                    "items": {
-                        "type": "object",
-                        "properties": {
-                            "id": {
-                                "type": "string"
-                            },
-                            "itemID": {
-                                "type": "string"
-                            },
-                            "picture": {
-                                "type": "string"
-                            }
-                        }
-                    }
+                "picture": {
+                    "type": "string"
                 },
                 "quantity": {
                     "type": "integer"
@@ -1034,6 +1192,17 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "models.ItemWithKeywordName": {
+            "type": "object",
+            "properties": {
+                "itemId": {
+                    "type": "string"
+                },
+                "keywordName": {
+                    "type": "string"
                 }
             }
         },
@@ -1067,10 +1236,24 @@
                 "name": {
                     "type": "string"
                 },
+                "picture": {
+                    "type": "string"
+                },
                 "quantity": {
                     "type": "integer"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ItemWithSubjectName": {
+            "type": "object",
+            "properties": {
+                "itemId": {
+                    "type": "string"
+                },
+                "keywordName": {
                     "type": "string"
                 }
             }
@@ -1221,6 +1404,9 @@
                                 "type": "string"
                             },
                             "name": {
+                                "type": "string"
+                            },
+                            "picture": {
                                 "type": "string"
                             },
                             "quantity": {
