# Backend/src/models/itemmodels.go
@@ -13,6 +13,7 @@ type ItemWithStatus struct {
 	Damaged     bool   `alias:"items.damaged"`
 	DamagedDesc string `alias:"items.damaged_description"`
 	Quantity    int32  `alias:"items.quantity"`
+	Picture     string `alias:"items.picture"`
 	Status      string `alias:"item_status.status_name"`
 }
 
@@ -27,6 +28,7 @@ type ItemWithEverything struct {
 	Damaged     bool   `alias:"items.damaged"`
 	DamagedDesc string `alias:"items.damaged_description"`
 	Quantity    int32  `alias:"items.quantity"`
+	Picture     string `alias:"items.picture"`
 	Status      string `alias:"item_status.status_name"`
 
 	Keywords []struct {
@@ -36,8 +38,25 @@ type ItemWithEverything struct {
 	Subject []struct {
 		model.ItemSubjects
 	}
+}
 
-	Pictures []struct {
-		model.ItemPictures
-	}
+type ItemWithKeyword struct {
+	ItemID    string `json:"itemId"`
+	KeywordID string `json:"keywordId"`
+}
+
+type ItemWithKeywordName struct {
+	ItemID      string `json:"itemId"`
+	KeywordName string `json:"keywordName"`
+}
+
+
+type ItemWithSubject struct {
+	ItemID    string `json:"itemId"`
+	SubjectID string `json:"keywordId"`
+}
+
+type ItemWithSubjectName struct {
+	ItemID      string `json:"itemId"`
+	SubjectName string `json:"keywordName"`
 }
